# ot-rs

./: Cargo.toml  README.md
src/core/: error.rs  mod.rs  operation.rs  text.rs
