[package]
name = "ot-rs"
version = "0.1.0"
edition = "2018"
license = "MIT"
authors = ["Rectcircle <rectcircle96@gmail.com>"]
description = "OT (Operational Transform) 算法 Rust 实现"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
